fix links alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,7 @@
 }
 
 .btn-clear {
-  @apply flex items-center py-2 px-4 rounded text-gray-600
+  @apply flex items-center justify-center py-2 px-4 rounded text-gray-600
 }
 
 .file-upload-btn {
